# prompt-picker

./: .gitignore  README.md  index.html
.github/workflows/: release.yml
prompt-picker/: package.json
prompt-picker/src/: App.tsx
prompt-picker/src-tauri/: Cargo.toml  tauri.conf.json
prompt-picker/src-tauri/capabilities/: default.json
prompt-picker/src-tauri/src/: config.rs  indexer.rs  lib.rs  main.rs  resolver.rs
prompt-picker/src/components/: EmptyState.tsx  HintBar.tsx  PreviewPane.tsx  SearchBar.tsx
prompt-picker/src/hooks/: useKeyboard.ts  useSearch.ts
prompt-picker/src/lib/: commands.ts  staging.ts  types.ts
scripts/: release.sh  version-bump.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: indexer.rs  lib.rs
src/components/: EmptyState.tsx  HintBar.tsx  PreviewPane.tsx  ResultsList.tsx  SearchBar.tsx  ShortcutsCard.tsx  StagingArea.tsx
src/hooks/: useKeyboard.ts
src/lib/: commands.ts  types.ts
