[package]
name = "prompt-picker"
version = "0.1.0"
description = "A macOS menubar prompt picker utility"
authors = ["you"]
edition = "2021"

[lib]
name = "prompt_picker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
serde_yaml = "0.9"
walkdir = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-graphics = "0.24"
